--- a/ejercicioGit/ejercicio.html
+++ b/ejercicioGit/ejercicio.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <input type="button" value="PRESS ME" onclick="saludar();"/>
-        <img src="./imagenes/descarga.gif" width="200px"/>
+        <img src="./imagenes/descarga.gif" width="200px" id="saludar"/>
+        
     </body>
 </html>
