Función mostrar imagen completa

--- a/utilitarios/saludo.html
+++ b/utilitarios/saludo.html
@@ -12,7 +12,12 @@
         <input type="text" id="txtEdad"/>
         <h3>Ingrese su estatura</h3>
         <input type="text" id="txtEstatura"/>
-        <input type="button" value="Saludar" onclick="saludar();"/>
+        <p>
+            <img width="200px" id="imgSaludo"/>
+        </p>
+        <p>
+            <input type="button" value="Saludar" onclick="saludar();"/>
+        </p>
 
         <h3>Resultado</h3>
         <h3 id="lblResultado"> </h3>
