--- a/promedioNotas/promedioNotas.html
+++ b/promedioNotas/promedioNotas.html
@@ -15,7 +15,10 @@
         <input type="text" id="txtNota3"/>
         <h3>Valor Promedio</h3>
         <h2 id="lblPromedio">0.0</h2>
+        <p>
+            <img id="lblImagen" width="200px"/>
+        </p>
         <input type="button" value="Calcular Promedio" onclick="calcularPromedioNotas();"/>
-
+        
     </body>
 </html>
