--- a/ImagenDadosArchivos/imagenDados.html
+++ b/ImagenDadosArchivos/imagenDados.html
@@ -12,6 +12,13 @@
         <div class="espacio"></div>
         <div class="imagen">
             <img src="" width="150px" id="imgDados"/>
+            <div class="info">
+                <div>PUNTAJE</div>
+                <div class="dados" id="lblPuntos">0</div>
+                <div>LANZAMIENTOS</div>
+                <div class="dados" id="lblLanzamientos">5</div>
+                <div class="mensaje" id="lblMensaje"></div>
+            </div>
         </div>
         <div class="botones">
             <input type="button" value="JUGAR" class="estiloBoton" onclick="jugar();" />
