Se agregan operadores logicos y de comparacion

--- a/promedioNotas/promedioNotas.html
+++ b/promedioNotas/promedioNotas.html
@@ -15,6 +15,7 @@
         <input type="text" id="txtNota3"/>
         <h3>Valor Promedio</h3>
         <h2 id="lblPromedio">0.0</h2>
+        <h1 id="lblMensaje"></h1>
         <p>
             <img id="lblImagen" width="200px"/>
         </p>
