--- a/placas/placas.html
+++ b/placas/placas.html
@@ -28,6 +28,14 @@
 
             </div>
         </div>
+        <div class=areaResultado>
+            <div>
+                PROVINCIA:
+            </div>
+            <div id="lblProvincia">
+            
+            </div>
+        </div>
     </div>
 
 </body>
