Se aumenta obtener Dia Pico Y Placa

--- a/placas/placas.html
+++ b/placas/placas.html
@@ -45,6 +45,14 @@
                     
                 </div>
             </div>
+            <div class=resultado>
+                <div>
+                    DIA PICO Y PLACA:
+                </div>
+                <div id="lblPicoYPlaca">
+                    
+                </div>
+            </div>
         </div>
     </div>
 
