Se agrega funcion limpiar

--- a/placas/placas.html
+++ b/placas/placas.html
@@ -18,8 +18,13 @@
             <div class="cajaPlaca">
                 <input type="text" id="txtPlaca" class="cajaTexto" />
             </div>
-            <div class="boton">
-                <input type="button" value="validar" onclick="validarPlaca();" class="estiloBoton"/>
+            <div class="botones">
+                <div class="contenedorBoton">
+                    <input type="button" value="validar" onclick="validarPlaca();" class="estiloBoton"/>
+                </div>
+                <div class="contenedorBoton">
+                    <input type="button" value="limpiar" onclick="limpiar();" class="estiloBoton"/>
+                </div>
             </div>
             <div id="lblValidacion" class="mensajeValidacion">
                 
