Generar Elemento, piedra papel o tijera

--- a/juego/juego.html
+++ b/juego/juego.html
@@ -7,6 +7,7 @@
         <link href="juego.css" rel="stylesheet"/>
     </head>
     <body>
-        <input type="button" value="JUGAR" onclick="obtenerAleatorio();"/>
+        <input type="button" value="JUGAR" onclick="generarElemento();"/>
+        <img src=""  id="lblImagen"/>
     </body>
 </html>
