Determinar Ganador y generar Ruta

--- a/juego/juego.html
+++ b/juego/juego.html
@@ -7,7 +7,7 @@
         <link href="juego.css" rel="stylesheet"/>
     </head>
     <body>
-        <input type="button" value="JUGAR" onclick="generarElemento();"/>
+        <input type="button" value="JUGAR" onclick="determinarGanador();"/>
         <img src=""  id="lblImagen"/>
     </body>
 </html>
