--- a/juego/juego.html
+++ b/juego/juego.html
@@ -12,6 +12,22 @@
                 <div class="titulo">
                     JUEGA PIEDRA PAPEL O TIJERA
                 </div>
+                <div class="puntaje">
+                    <div class="letra">
+                        PUNTOS JUGADOR:
+                    </div>
+                    <div class="letra" id="lblJugador">
+                        0.0
+                    </div>
+                </div>
+                <div class="puntaje">
+                    <div class="letra">
+                        PUNTOS COMPUTADOR:
+                    </div>
+                    <div class="letra" id="lblPuntajeComputador">
+                        0.0
+                    </div>
+                </div>
                 <div class="imagenes">
                     <img src="./imagenes/piedra.png" onclick="jugar('piedra');">
                     <img src="./imagenes/papel.png" onclick="jugar('papel');">
@@ -19,6 +35,9 @@
                     <div id="lblGanador" class="resultado">
 
                     </div>
+                </div>
+                <div class="boton">
+                    <input type="button" value="NUEVA PARTIDA" onclick="nuevaPartida();"/>
                 </div>
                 <div class="computador">
                     <div class="letra">
