--- a/juego/juego.html
+++ b/juego/juego.html
@@ -4,7 +4,7 @@
         <script src="serviciosJuego.js"></script>
         <script src="juego.js"></script>
         <script src="utilitarios.js"></script>
-        <link href="juego.css" rel="stylesheet"/>
+        <link  href="juego.css" rel="stylesheet"/>
     </head>
     <body>
         <div class="principal">
@@ -20,7 +20,7 @@
                         0.0
                     </div>
                 </div>
-                <div class="puntaje">
+                <div class="puntajeComputadora">
                     <div class="letra">
                         PUNTOS COMPUTADOR:
                     </div>
@@ -29,23 +29,25 @@
                     </div>
                 </div>
                 <div class="imagenes">
-                    <img src="./imagenes/piedra.png" onclick="jugar('piedra');">
-                    <img src="./imagenes/papel.png" onclick="jugar('papel');">
-                    <img src="./imagenes/tijeras.png" onclick="jugar('tijeras');">
-                    <div id="lblGanador" class="resultado">
+                    <img src="./imagenes/piedra.png" onclick="jugar('piedra');" class="estiloImagen">
+                    <img src="./imagenes/papel.png" onclick="jugar('papel');" class="estiloImagen">
+                    <img src="./imagenes/tijeras.png" onclick="jugar('tijeras');" class="estiloImagen">
+                    <div class="computador">
+                        <div class="letra">
+                            COMPUTADOR
+                        </div>
+                        <div class="imagenCompu">
+                            <img src="" id ="lblComputador" class="estiloImagen"/>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div id="lblGanador" class="letra">
 
                     </div>
                 </div>
                 <div class="boton">
-                    <input type="button" value="NUEVA PARTIDA" onclick="nuevaPartida();"/>
-                </div>
-                <div class="computador">
-                    <div class="letra">
-                        COMPUTADOR
-                    </div>
-                    <div class="imagenCompu">
-                        <img src="" id ="lblComputador" />
-                    </div>
+                    <input type="button" value="NUEVA PARTIDA" onclick="nuevaPartida();" class="estiloBoton"/>
                 </div>
 
             </div>
