--- a/Arreglos/ejercicio1.html
+++ b/Arreglos/ejercicio1.html
@@ -9,5 +9,10 @@
         <input type="button" value="AGREGAR NOTA" onclick="provarAgregar();"/>
         <input type="button" value="PRUEBA 1" onclick="agregarElementos();"/>
         <input type="button" value="IMPRIMIR" onclick="recorrerArreglo();"/>
+        <h3>PROMEDIO</h3>
+        <h3 id="lblPromedio"> 
+            0.0
+        </h3>
+        <input type="button" value="CALCULAR PROMEDIO" onclick="ejecutarPromedio();"/>
     </body>
 </html>
