--- a/Objetos/objetos.html
+++ b/Objetos/objetos.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <input type="button" value="PRUEBA 1" onclick="probarAtributos();"/>
+        <input type="button" value="PRODUCTO" onclick="crearProducto();"/>
     </body>
 </html>
