Segunda forma Objetos

--- a/Objetos/objetos.html
+++ b/Objetos/objetos.html
@@ -6,5 +6,7 @@
     <body>
         <input type="button" value="PRUEBA 1" onclick="probarAtributos();"/>
         <input type="button" value="PRODUCTO" onclick="crearProducto();"/>
+        <input type="button" value="PRUEBA 2" onclick="modificarAtributos();"/>
+        <input type="button" value="PRUEBA 3" onclick="crearCliente();"/>
     </body>
 </html>
