--- a/Objetos/clientes.html
+++ b/Objetos/clientes.html
@@ -2,8 +2,16 @@
 <html>
     <head>
         <script src="clientes.js"></script>
+        <script src="utilitarios.js"></script>
     </head>
     <body>
+        <h5>Cedula</h5>
+        <input type="text" id="txtCedula"/>
+        <h5>Nombre</h5>
+        <input type="text" id="txtNombre"/>
+        <h5>Edad</h5>
+        <input type="text" id="txtEdad"/>
+        <input type="button" value="AGREGAR" onclick="crearClientes();"/>
         <input type="button" value="MOSTRAR" onclick="mostrarClientes();"/>
         <div id="tablaClientes">
 
