Se agregan Validaciones

--- a/Objetos/clientes.html
+++ b/Objetos/clientes.html
@@ -7,10 +7,13 @@
     <body>
         <h5>Cedula</h5>
         <input type="text" id="txtCedula"/>
+        <h4 id="lblErrorCedula"></h4>
         <h5>Nombre</h5>
         <input type="text" id="txtNombre"/>
+        <h4 id="lblErrorNombre"></h4>
         <h5>Edad</h5>
         <input type="text" id="txtEdad"/>
+        <h4 id="lblErrorEdad"></h4>
         <input type="button" value="AGREGAR" onclick="crearClientes();"/>
         <input type="button" value="MOSTRAR" onclick="mostrarClientes();"/>
         <div id="tablaClientes">
