--- a/Objetos/clientes.html
+++ b/Objetos/clientes.html
@@ -19,5 +19,8 @@
         <div id="tablaClientes">
 
         </div>
+        <h5>INGRESE LA CEDULA</h5>
+        <input type="text" id="txtCedulaBusqueda"/>
+        <input type="button" value="BUSCAR" onclick="ejecutarBusqueda();"/>
     </body>
 </html>
