Se agrega MODIFICAR CLIENTE

--- a/Objetos/clientes.html
+++ b/Objetos/clientes.html
@@ -16,6 +16,7 @@
         <h4 id="lblErrorEdad"></h4>
         <input type="button" value="AGREGAR" onclick="crearClientes();"/>
         <input type="button" value="MOSTRAR" onclick="mostrarClientes();"/>
+        <input type="button" value="GUARDAR" onclick="guardarCambios();"/>
         <div id="tablaClientes">
 
         </div>
