--- a/roles/roles.html
+++ b/roles/roles.html
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="logoEscuela">
-                <img src="./imagenes/logoKrakeDev.png" width="80%" />
+                <img src="./imagenes/pngwing3.com.png" width="80%" />
             </div>
         </div>
     </div>
@@ -173,7 +173,7 @@
                 </div>
             </div>
             <div class="logoEscuela">
-                <img src="./imagenes/logoKrakeDev.png" width="80%" />
+                <img src="./imagenes/pngwing4.com.png" width="80%" />
             </div>
         </div>
     </div>
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <div class="logoEscuela">
-                <img src="./imagenes/logoKrakeDev.png" width="80%" />
+                <img src="./imagenes/pngwing.com.png" width="80%" />
             </div>
         </div>
     </div>
