--- a/roles/roles.html
+++ b/roles/roles.html
@@ -7,7 +7,7 @@
     <link href="roles.css" rel="stylesheet"/>
 </head>
 
-<body onload="mostrarObcionEmpleado();">
+<body onload="mostrarObcionRol();">
     <div class="menu">
         <div class="contenedorBoton">
             <input type="button" value="EMPLEADO" class="estiloBoton" onclick="mostrarObcionEmpleado();" />
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="contenedorBoton">
-                    <input type="button" value="BUSCAR" class="estiloBoton" />
+                    <input type="button" value="BUSCAR" class="estiloBoton" onclick="buscarPorRol();" />
                 </div>
             </div>
 
