--- a/comida/public_html/index.html
+++ b/comida/public_html/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with FoodHut landing page.">
     <meta name="author" content="Devcrud">
+    <!-- Cambie el titulo de la pagina -->
     <title>Conoce la variedad de nuestros platillos vasados en el anime</title>
    
     <!-- font icons -->
@@ -25,6 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <!-- Deje las 3 occiones del menu y el titulo -->
                     <a class="nav-link" href="#home">Principal</a>
                 </li>
                 <li class="nav-item">
@@ -45,15 +47,17 @@
     <!-- header -->
     <header id="home" class="header">
         <div class="overlay text-white text-center">
+            <!-- cambie el contenido de la pagina principal -->
             <h1 class="display-2 font-weight-bold my-3">Comida Anime</h1>
             <h2 class="display-4 mb-5"> Es Una Aventura Calida &amp; Reconfortante </h2>
             <a class="btn btn-lg btn-primary" href="#gallary">Revisa Nuestra Galeria</a>
         </div>
     </header>
-
+    <!-- Borre este seccion -->
     <!--  About Section  -->
 
     <!--  gallary Section  -->
+      <!-- Cambie las imagenes por unas que se relacionaran con el tema -->
     <div id="gallary" class="text-center bg-dark text-light has-height-md middle-items wow fadeIn">
         <h2 class="section-title">NUESTRO MENU OFRECE</h2>
     </div>
@@ -135,15 +139,15 @@
     <!-- book a table Section  -->
     <!-- BLOG Section  -->
     <div id="blog" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
-        <h2 class="section-title py-5">DULCES MAS POPULARES</h2>
+        <h2 class="section-title py-5">DULCES MAS POPULARES</h2> <!-- Cambie el titulo-->
         <div class="row justify-content-center">
             <div class="col-sm-7 col-md-4 mb-5">
                 <ul class="nav nav-pills nav-justified mb-3" id="pills-tab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#foods" role="tab" aria-controls="pills-home" aria-selected="true">Comida</a>
+                        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#foods" role="tab" aria-controls="pills-home" aria-selected="true">Comida</a> <!-- Cambie el subtitulo-->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#juices" role="tab" aria-controls="pills-profile" aria-selected="false">cocteles</a>
+                        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#juices" role="tab" aria-controls="pills-profile" aria-selected="false">cocteles</a> <!-- Cambie el subtitulo-->
                     </li>
                 </ul>
             </div>
@@ -152,6 +156,7 @@
             <div class="tab-pane fade show active" id="foods" role="tabpanel" aria-labelledby="pills-home-tab">
                 <div class="row">
                     <div class="col-md-4">
+                        <!-- Cambie las imagenes el precio y tambien el texto de informacion  -->
                         <div class="card bg-transparent border my-3 my-md-0">
                             <img src="assets/imgs/imagen15.jpg" alt="template by DevCRID http://www.devcrud.com/" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
@@ -162,6 +167,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
+                        <!-- Cambie las imagenes el precio y tambien el texto de informacion  -->
                         <div class="card bg-transparent border my-3 my-md-0">
                             <img src="assets/imgs/imagen16.webp" alt="template by DevCRID http://www.devcrud.com/" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
@@ -172,6 +178,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
+                        <!-- Cambie las imagenes el precio  y tambien el texto de informacion -->
                         <div class="card bg-transparent border my-3 my-md-0">
                             <img src="assets/imgs/imagen17.jpg" alt="template by DevCRID http://www.devcrud.com/" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
@@ -186,6 +193,7 @@
             <div class="tab-pane fade" id="juices" role="tabpanel" aria-labelledby="pills-profile-tab">
                 <div class="row">
                     <div class="col-md-4 my-3 my-md-0">
+                        <!-- Cambie las imagenes el precio en la seccion de bebidas y tambien el texto de informacion  -->
                         <div class="card bg-transparent border">
                             <img src="assets/imgs/bebidas1.webp" alt="template by DevCRID http://www.devcrud.com/" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
@@ -196,6 +204,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 my-3 my-md-0">
+                        <!-- Cambie las imagenes el precio en la seccion de bebidas y tambien el texto de informacion  -->
                         <div class="card bg-transparent border">
                             <img src="assets/imgs/bebidas2.jpg" alt="template by DevCRID http://www.devcrud.com/" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
@@ -207,6 +216,7 @@
                     </div>
                     <div class="col-md-4 my-3 my-md-0">
                         <div class="card bg-transparent border">
+                            <!-- Cambie las imagenes el precio en la seccion de bebidas y tambien el texto de informacion  -->
                             <img src="assets/imgs/bebidas3.jpg" alt="template by DevCRID http://www.devcrud.com/" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
                                 <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">$20</a></h1>
@@ -219,7 +229,7 @@
             </div>
         </div>
     </div>
-
+    <!-- Borre estas secciones   -->
     <!-- REVIEWS Section  -->
 
     <!-- CONTACT Section  -->
