Parte 2 Mostrar Personas

--- a/Andrea Castro/orden.html
+++ b/Andrea Castro/orden.html
@@ -5,7 +5,7 @@
         <script src="orden.js"></script>
         <link href="orden.css" rel="stylesheet"/>
     </head>
-    <body>
+    <body onload="mostrarPersona();">
         <div class="principal">
             <div class="logoEscuela">
                 <img src="./imagenes/logoKrakeDev.png" width="80%" />
@@ -39,7 +39,9 @@
                 </div>
             </div>
             <div class="areaResultado">
+                <div id="tablaClientes">
 
+                </div>
             </div>
         </div>
     </body> 
