Parte 3 Agregar Mayor

--- a/Andrea Castro/orden.html
+++ b/Andrea Castro/orden.html
@@ -36,11 +36,20 @@
                     <div class="contenedorBoton">
                         <input type="button" value="GUARDAR" onclick="agregarPersona()" class="estiloBoton"/>
                     </div>
+                    <div class="contenedorBoton">
+                        <input type="button" value="ENCONTRAR MAYOR" onclick="determinarMayor()" class="estiloBoton"/>
+                    </div>
                 </div>
             </div>
             <div class="areaResultado">
                 <div id="tablaClientes">
 
+                </div>
+                <div class="tituloResultado">
+                    PERSONA MAYOR
+                </div>
+                <div id="personaMayor">
+    
                 </div>
             </div>
         </div>
