Parte 3 Encontrar Menor

--- a/Andrea Castro/orden.html
+++ b/Andrea Castro/orden.html
@@ -40,6 +40,11 @@
                         <input type="button" value="ENCONTRAR MAYOR" onclick="determinarMayor()" class="estiloBoton"/>
                     </div>
                 </div>
+                <div class="botones">
+                    <div class="contenedorBoton">
+                        <input type="button" value="ENCONTRAR MENOR" onclick="determinarMenor()" class="estiloBoton"/>
+                    </div>
+                </div>
             </div>
             <div class="areaResultado">
                 <div id="tablaClientes">
@@ -50,6 +55,12 @@
                 </div>
                 <div id="personaMayor">
     
+                </div>
+                <div class="tituloResultado">
+                    PERSONA MENOR
+                </div>
+                <div id="personaMenor">
+
                 </div>
             </div>
         </div>
